; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/cris/arch-v32/lib/extr_delay.c_cris_delay10ns.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/cris/arch-v32/lib/extr_delay.c_cris_delay10ns.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@timer = common dso_local global i32 0, align 4
@regi_timer0 = common dso_local global i32 0, align 4
@r_time = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cris_delay10ns(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i32, i32* @timer, align 4
  %5 = load i32, i32* @regi_timer0, align 4
  %6 = load i32, i32* @r_time, align 4
  %7 = call i64 @REG_RD(i32 %4, i32 %5, i32 %6)
  store i64 %7, i64* %3, align 8
  br label %8

8:                                                ; preds = %17, %1
  %9 = load i32, i32* @timer, align 4
  %10 = load i32, i32* @regi_timer0, align 4
  %11 = load i32, i32* @r_time, align 4
  %12 = call i64 @REG_RD(i32 %9, i32 %10, i32 %11)
  %13 = load i64, i64* %3, align 8
  %14 = sub nsw i64 %12, %13
  %15 = load i64, i64* %2, align 8
  %16 = icmp slt i64 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %8
  br label %8

18:                                               ; preds = %8
  ret void
}

declare dso_local i64 @REG_RD(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
